TP4/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
spec:
  containers:
  - name: echo-pod
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
      - name: my-container
        image: registry.cluster.wik.cloud/public/echo:latest

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
