TP4/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: mon-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
